# StarSim

./: .gitignore  .pre-commit-config.yaml  PLAN.md  pyproject.toml
.github/workflows/: main.yml
data/: commodities.yaml  events.yaml  recipes.yaml  universe.yaml
data/generation/: habitability_tables.yaml  planet_names.yaml  planet_types.yaml  system_names.yaml  system_templates.yaml
scripts/: gen_universe.py  inspect_world.py  run_sim.py
src/starsim/: __init__.py
src/starsim/core/: ids.py  log.py  rng.py  sim.py  state.py
src/starsim/economy/: __init__.py  commodities.py  consumption.py  inventory.py  investment.py  market.py  production.py  recipes.py  trade.py  upkeep.py
src/starsim/events/: __init__.py  effects.py  generator.py  model.py  registry.py
src/starsim/factions/: __init__.py  actions.py  ai.py  integrate.py  model.py
src/starsim/generation/: __init__.py  bootstrap.py  lane_gen.py  load.py  model.py  schema.md  (+1 more)
tests/: conftest.py  regression_golden.json  regression_seeded_golden.json  test_generator_regression.py  test_milestone1.py  test_milestone14.py  test_milestone15.py  test_milestone16.py  test_milestone17.py  test_milestone18.py  test_milestone19.py  test_milestone2.py  test_milestone20.py  test_milestone21.py  test_milestone22.py  test_milestone23.py  test_milestone23_gazette.py  test_milestone3.py  test_milestone4.py  test_milestone5.py  test_milestone6.py  test_milestone7.py  test_regression_seeded.py  test_resource_economy_regression.py  test_visualizer_sim.py
visualizer/: app.py
visualizer/templates/: index.html
(+13 files in other folders)
